# taralists

./: .gitignore  CHANGES.rst  Makefile  compose.dev.yml  compose.yml  docker-compose.dev.yml  docker-compose.yml
.github/actions/setup-uv-env/: action.yml
.github/workflows/: test.yml
backend/: Makefile  README.rst  pyproject.toml
backend/taralists/testing/: compose.py  services.py
backend/tests/integration/: test_mailman_web.py  test_postfix.py
certbot/: deploy-hook.sh  dhparams.pem
mailman-core/: Dockerfile  mailman-extra.cfg
mailman-web/: Dockerfile  mailman-provision.py  settings_local.py
nginx/: .gitignore  bootstrap.py  docker-entrypoint.sh
nginx/conf.d/templates/: nginx.conf.j2  sites-default.conf.j2
postfix/: Dockerfile  docker-entrypoint.sh  main.cf
